--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
 
+  <table>
+  <tr>
+    <th>City</th>
+    <th>State</th>
+    <th> 2017 estimate</th>
+  </tr>
+  <tr></tr>
+  <tr></tr>
+  <tr></tr>
+</table>
+
+
   <!-- Write your HTML here -->
-  
+
 </body>
 </html>
